--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rm -rf dist && webpack --config webpack.prod.js",
     "lint": "eslint src",
     "test": "jest",
-    "gh-pages": "git subtree push --prefix dist origin gh-pages"
+    "gh-pages": "git subtree push --prefix dist origin gh-pages",
   },
   "author": "Stu Freen (http://www.stufreen.com)",
   "license": "MIT",
